# pbRecorder

./: .gitignore  CMakeLists.txt  README.md
resources/: pbRecorder.rc
src/: main.cpp
src/audio/: AsioCapture.cpp  AsioCapture.h  IAudioSource.h  WasapiCapture.cpp  WasapiCapture.h
src/capture/: DxgiScreenCapture.cpp  DxgiScreenCapture.h  ICaptureSource.h  RegionCapture.cpp  RegionCapture.h  WindowCapture.cpp  WindowCapture.h
src/core/: D3DManager.cpp  D3DManager.h  MonitorEnumerator.cpp  MonitorEnumerator.h  RecordingSession.cpp  RecordingSession.h  Types.h  WindowEnumerator.cpp  WindowEnumerator.h
src/pipeline/: IRecordingPipeline.h  MkvPipeline.cpp  MkvPipeline.h  SinkWriterPipeline.cpp  SinkWriterPipeline.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  RegionSelectorWidget.cpp  RegionSelectorWidget.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
